Relabel UniqueId -> data
Signed-off-by: Mickael Istria <mistria@redhat.com>